@@ -188,7 +188,7 @@ class SchemaDataPrepValidateTests(unittest.TestCase):
 
 def schemaValidateSuite():
     suiteSelect = unittest.TestSuite()
-    suiteSelect.addTest(SchemaDataPrepValidateTests("testValidateOptsRepo"))
+    #suiteSelect.addTest(SchemaDataPrepValidateTests("testValidateOptsRepo"))
     suiteSelect.addTest(SchemaDataPrepValidateTests("testValidateOptsList"))
     return suiteSelect
 
